--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,9 @@ h5 {
   color: var(--text-color);
   font-family: Montserrat-900;
   font-size: 1.8em;
+  margin-bottom:5px;
 }
+
 h6 {
   font-size: 1.1em;
   font-family: Montserrat-900;
@@ -115,7 +117,11 @@ h6 {
 }
 p {
   font-family: Montserrat-400;
-  font-size: 1em;
+  font-size: 1.15em;
+  color:var(--text-color);
+}
+footer p{
+  color:white;
 }
 /********************************************************************/
 /*******************************Header*******************************/
@@ -135,16 +141,12 @@ p {
   flex-direction: column;
   align-items: center;
 }
-.header-logo {
-  width: 150px;
-  height: auto;
-}
 .header-principal .container nav ul {
   display: flex;
   margin-top: 4px;
 }
 .header-principal .container nav ul li {
-  margin-right: 12px;
+  margin-right: 20px;
 }
 .header-principal .container nav ul li a {
   color: var(--text-color);
@@ -172,9 +174,9 @@ p {
 .search .search-container {
   background-image: url("img/knife-bg.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
-  height: 300px;
+  height: 370px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -198,6 +200,7 @@ p {
   border-radius: 8px;
   padding-left: 40px;
   border: 1px solid var(--principal-color);
+  font-family: 'Montserrat-400';
 }
 .input-container .input-icon-search {
   position: absolute;
@@ -379,6 +382,9 @@ footer .social-container .text-container {
   z-index: 50;
   color:var(--text-color);
 }
+footer .social-container .text-container > h5{
+  margin-bottom: 0px
+}
 footer .social-container::before {
   content: "";
   display: block;
@@ -396,6 +402,7 @@ footer .social-container::before {
 }
 footer .social-container .text-container p {
   padding: 0 1px;
+  color: var(--text-color)
 }
 footer .social-container .text-container .newsletter {
   display: flex;
@@ -476,10 +483,6 @@ footer .social-media .separator-contents .list-images {
   display: flex;
   margin-bottom: 10px;
 }
-footer .social-media .separator-contents .list-images li {
-  width: 20px;
-  height: 20px;
-}
 footer .social-media .separator-contents .list-images li:not(.facebook) {
     margin-right: 20px;
 }
@@ -533,6 +536,7 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
 .introduction-section {
     margin-top: 100px;
     margin-bottom: 15px;
+    
   }
 .introduction-section .section-header {
     display: flex;
@@ -541,13 +545,13 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     justify-content: center;
     align-items: center;
     padding: 10px 30px;
+    padding-left:20px;
   }
 .introduction-section .section-header p {
     text-align: center;
   } 
 .introduction-section .videos-list-cards {
-    padding: 10px;
-    padding-right: 14px;
+    padding: 10px 20px;
     display: grid;
     gap: 20px;
     display: grid;
@@ -586,19 +590,17 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     z-index: 10;
   }
   .header-principal .container {
-    display: flex;
-    align-items: center;
     flex-direction: row;
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
-    padding-left: 10px;
+    padding-left: 20px;
   }
   .introduction-section .section-header {
     align-items: start;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0px;
+    
   }
   .introduction-section .section-header p {
     margin-right: 14px;
@@ -606,7 +608,6 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
   .main-content-container .filters {
     display: block; /*no aparezca/ocupe espacio*/
     background-color: white;
-    margin-left: 13px;
     width: 25%;
   }
   footer .social-media .separator-contents .social-media-links .social-media-links-icons p{
@@ -617,6 +618,7 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     flex-direction: row;
     max-width: 1200px;
     margin: 0 auto;
+    padding-left:20px;
   }
   .home-container {
     max-width: 1200px;
@@ -655,8 +657,8 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     gap:16px;
   }
   .shop-information .card-shop h2::before {
-    left: 10%;
-    right: 10%;
+    left: 22%;
+    right: 22%;
   }
   .introduction-section .videos-list-cards {
     grid-template-columns: repeat(2, 1fr);
@@ -702,9 +704,7 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
   .introduction-section .section-header p {
     text-align: left;
 }
-.introduction-section{
-    margin-left:20px;
-}
+
 .Mini-chicken{
     display: flex;
     align-items: left;
@@ -719,6 +719,7 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     align-items: left;
     flex-direction: column;
     width:50%;
+    padding-top:20px;
 }
 }
 @media screen and (min-width: 801px) {
