--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(./fonts/400.woff2) format("woff2");
+  src: url(../fonts/400.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
@@ -14,7 +14,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(./fonts/600.woff2) format("woff2");
+  src: url(../fonts/600.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
@@ -24,7 +24,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url(./fonts/900.woff2) format("woff2");
+  src: url(../fonts/900.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
@@ -37,7 +37,6 @@
   --header-background-color: #ffffff;
   --principal-color: #79baab;
   --news-letter-background: #4bbaaa;
-  /*--principal-color: #309aa3;*/
   --principal-color-light: #c5e1db;
   --contrast-color: #dc4a23;
   --contrast-color-light: #eb9781;
@@ -108,7 +107,6 @@ h5 {
   font-size: 1.8em;
   margin-bottom:5px;
 }
-
 h6 {
   font-size: 1.1em;
   font-family: Montserrat-900;
@@ -158,7 +156,7 @@ footer p{
   border-bottom-color: var(--principal-color);
 }
 .header-principal .container nav ul li.selected a {
-  border-bottom: 1.4px dashed black;
+  border-bottom: 1.4px dashed var(--text-color);
   padding-bottom: 1px;
   font-family: Montserrat-900;
 }
@@ -166,13 +164,13 @@ footer p{
   border-bottom-color: var(--principal-color);
 }
 /********************************************************************/
-/*********************STYLES***********************/
+/*********************STYLES BODY***********************/
 .search {
   min-width: 220px;
   margin-top: 80px;
 }
 .search .search-container {
-  background-image: url("img/knife-bg.jpg");
+  background-image: url("../img/knife-bg.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -232,11 +230,11 @@ footer p{
     font-size: 0.8em;
     align-items: center;
 }
-#index .articles-grid .container-articles-grid-photos{
-  margin-bottom:20px;
+#index .articles-grid{
   margin-top:20px;
 }
-#index .articles-grid{
+#index .articles-grid .container-articles-grid-photos{
+  margin-bottom:20px;
   margin-top:20px;
 }
 .articles-grid .container-articles-grid {
@@ -265,6 +263,10 @@ footer p{
 .articles-grid .container-articles-grid-photos .container-articles-grid-link:hover {
   transform: scale(1.075);
   opacity: 1;
+  
+}
+.articles-grid .container-articles-grid-photos .container-articles-grid-link h3:hover {
+  color: var(--principal-color);
 }
 .pagination-nav ul{
   margin-top: 20px;
@@ -272,6 +274,9 @@ footer p{
   display: flex;
   justify-content: center;
   gap: 10px;
+}
+.pagination-nav ul li a:hover{
+  color:var(--principal-color-light);
 }
 .pagination-nav-link{
   font-family: Montserrat-600;
@@ -282,7 +287,7 @@ footer p{
   color:var(--text-color);
 }
 .shop-information {
-  background-image: url("img/shop-bg.jpg");
+  background-image: url("../img/shop-bg.jpg");
   background-size: cover;
   background-position: start;
   background-repeat: no-repeat;
@@ -295,7 +300,7 @@ footer p{
   margin-right:20px;
 }
 .shop-information .card-shop {
-  background-color: white;
+  background-color: var(--header-background-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -306,17 +311,16 @@ footer p{
   gap:16px;
 }
 .shop-information .card-shop p {
-  font-family: Montserrat-400;
-  text-align: center;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  font-size: 1.1em;
+  text-align: center;  
 }
 .shop-information .card-shop a {
   color: var(--contrast-color);
   font-family: Montserrat-600;
   text-align: center;
   display: block;
+}
+.shop-information .card-shop a:hover {
+  color: var(--contrast-color-light);
 }
 .shop-information .card-shop span {
   background-color: var(--header-background-color);
@@ -332,15 +336,16 @@ footer p{
   background-color: var(--body-background-color);
 }
 .Mini-chicken .intro {
-  color: var(--text-color);
-  font-family: Montserrat-400;
-  font-size: 1.1em;
+  margin-bottom: 30px;
+}
+.Mini-chicken .mini-chicken-article-info{
+  margin-bottom:30px;
 }
 .Mini-chicken .article-image {
   width: 100%;
   height: auto;
 }
-.Mini-chicken p > button {
+.Mini-chicken p > .link-button-appearance {
   color: var(--principal-color);
   padding: 10px 14px;
   border: 1px solid var(--principal-color);
@@ -350,16 +355,62 @@ footer p{
   margin-top: 20px;
   margin-bottom: 20px;
 }
+.Mini-chicken p > .link-button-appearance:hover{
+  color:var(--text-color-dark-background);
+  background-color: var(--principal-color);
+  border-color: var(--principal-color);
+}
+/**videos,recipes & shop**/
+.introduction-section {
+  margin-top: 100px;
+  margin-bottom: 15px;
+  
+}
+.introduction-section .section-header {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 30px;
+  padding-left:20px;
+}
+.introduction-section .section-header p {
+  text-align: center;
+} 
+.introduction-section .videos-list-cards {
+  padding: 10px 20px;
+  display: grid;
+  gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  max-width: 1200px;
+  margin: auto;
+}
+.introduction-section .videos-list-cards .video-card {
+  background-color: var(--header-background-color);
+}
+.introduction-section .videos-list-cards .video-card .video-player {
+  width: 100%;
+  height: 315px;
+}
+.introduction-section .videos-list-cards .video-card .video-description {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items:; */
+  padding: 10px 10px;
+}
 /**********************************footer**********************************/
 footer {
   min-width: 220px;
   display: flex;
   flex-direction: column;
-  color: white;
+  color: var(--text-color-dark-background);
 }
-
 footer ul li a {
-  color: white;
+  color: var(--text-color-dark-background);
 }
 footer .social-container {
   position: relative;
@@ -393,7 +444,7 @@ footer .social-container::before {
   top: 0;
   z-index: 1;
   opacity: 0.1;
-  background-image: url("img/doodle.png");
+  background-image: url("../img/doodle.png");
   background-size: initial;
   background-position: bottom;
   background-repeat: repeat;
@@ -424,24 +475,24 @@ footer .social-container .text-container .newsletter button {
   background-color: var(--contrast-color);
   border-radius: 2px;
   border: 0.5px;
-  color: white;
+  color: var(--text-color-dark-background);
   font-family: Montserrat-600;
   font-size: 0.75em;
   transition: background-color 500ms;
 }
 footer .social-container .text-container .newsletter button:hover{
-  background-color: #ef7655;
+  background-color: var(--contrast-color-light);
   transition: background-color 500ms;
   cursor: pointer;
   box-shadow: rgba(100, 100, 70, 0.8) 0px 4px 10px 0px;;
 }
 footer .social-media {
   background-color: var(--dark-background);
-  color: white;
+  color: var(--text-color-dark-background);
 }
 footer .social-media .separator-contents {
   width: 100%;
-  padding: 30px;
+  padding: 30px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -471,7 +522,7 @@ footer .social-media .separator-contents hr {
   width: 100%;
   height: 1px;
   border: 0;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid var(--text-color-dark-background);
   margin-bottom: 10px;
 }
 footer .social-media .separator-contents .bold-paragraph {
@@ -495,23 +546,22 @@ footer .social-media .separator-contents .list-images li a::before {
   background-position: 50% 50%;
   position: absolute;
 }
-
 .list-images > li.facebook a:hover {
   filter: invert(32%) sepia(20%) saturate(1529%) hue-rotate(182deg) brightness(97%) contrast(93%);
+  opacity:0.7;
 }
-
 .list-images > li.instagram a:hover{
   filter: brightness(50%) invert(100%) sepia(25%) saturate(5836%) hue-rotate(311deg) brightness(107%) contrast(103%);
+  opacity:0.7;
 }
-
 .list-images > li.twitter a:hover{
   filter: invert(47%) sepia(87%) saturate(1833%) hue-rotate(163deg) brightness(97%) contrast(104%);
+  opacity:0.7;
 }
-
 .list-images > li.youtube a:hover {
   filter: invert(40%) sepia(99%) saturate(5548%) hue-rotate(349deg) brightness(98%) contrast(103%);
+  opacity:0.7;
 }
-
 footer .social-media .separator-contents .web-links-interest {
   margin-top: 20px;
     display: flex;
@@ -532,54 +582,20 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
   transition: color 500ms;
   transform:scale(1.075);
 }
-/**videos,recipes & shop**/
-.introduction-section {
-    margin-top: 100px;
-    margin-bottom: 15px;
-    
-  }
-.introduction-section .section-header {
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 30px;
-    padding-left:20px;
-  }
-.introduction-section .section-header p {
-    text-align: center;
-  } 
-.introduction-section .videos-list-cards {
-    padding: 10px 20px;
-    display: grid;
-    gap: 20px;
-    display: grid;
-    grid-template-columns: 1fr;
-    max-width: 1200px;
-    margin: auto;
-  }
-.introduction-section .videos-list-cards .video-card {
-    background-color: var(--header-background-color);
-  }
-.introduction-section .videos-list-cards .video-card .video-player {
-    width: 100%;
-    height: 315px;
-  }
-.introduction-section .videos-list-cards .video-card .video-description {
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-    /* justify-content: center; */
-    /* align-items:; */
-    padding: 10px 10px;
-  }
+
   /**************************/
-/*Tamaño pantalla ordenador*/
+/*Break point mobile screen*/
 @media screen and (min-width: 601px) {
   .header-principal {
     box-shadow: rgba(100, 100, 70, 0.2) 0px 7px 29px 0px;
     height:50px;
+  }
+  .header-principal .container {
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-left: 20px;
   }
   .search {
     margin-top: 50px;
@@ -588,13 +604,6 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     width: 25%;
     position: relative;
     z-index: 10;
-  }
-  .header-principal .container {
-    flex-direction: row;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-left: 20px;
   }
   .introduction-section .section-header {
     align-items: start;
@@ -605,13 +614,16 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
   .introduction-section .section-header p {
     margin-right: 14px;
   }
+  .introduction-section .videos-list-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .introduction-section .section-header p {
+    text-align: left;
+  }
   .main-content-container .filters {
     display: block; /*no aparezca/ocupe espacio*/
-    background-color: white;
+    background-color: var(--header-background-color);
     width: 25%;
-  }
-  footer .social-media .separator-contents .social-media-links .social-media-links-icons p{
-    font-family: Montserrat-600;
   }
   .main-content-container {
     display: flex;
@@ -639,7 +651,7 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     
   }
   .shop-information .card-shop {
-    background-color: white;
+    background-color: var(--header-background-color);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -653,28 +665,30 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     left: 22%;
     right: 22%;
   }
-  .introduction-section .videos-list-cards {
-    grid-template-columns: repeat(2, 1fr);
+  .Mini-chicken{
+    display: flex;
+    flex-direction: row;
+    gap:50px;
+    
   }
-  .social-container .text-container {
+  .Mini-chicken .article-image{
+    width:50%;
+  }
+  .Mini-chicken .mini-chicken-article-info{
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+    width:50%;
+    margin-top:20px;
+  }
+  footer .social-container .text-container{
     max-width: 20%;
     min-width: 400px;
   }
-  .social-media-links {
-    width: 100%;
-    align-items: center;
-  }
-  .social-media .separator-contents {
+  footer .social-media .separator-contents {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0;
-  }
-  .social-media-links {
-    display: flex;
-    flex-direction: row;
-    align-items: normal;
-    justify-content: space-between;
-  }
+    }
   footer .social-media .separator-contents .web-links-interest {
       margin-top:0;
   }
@@ -685,8 +699,15 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     justify-content: space-between;
     width:100%
   }
-  .separator-contents .bold-paragraph {
+  footer .social-media .separator-contents .bold-paragraph {
     margin-bottom: 0px;
+  }
+  footer .social-media .separator-contents .social-media-links {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: normal;
+    justify-content: space-between; 
   }
   footer .social-media .separator-contents .social-media-links .social-media-links-icons {
     display: flex;
@@ -694,27 +715,11 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     align-items: normal;
     gap: 20px;
   }
-  .introduction-section .section-header p {
-    text-align: left;
+  footer .social-media .separator-contents .social-media-links .social-media-links-icons p{
+    font-family: Montserrat-600;
+  }
 }
-
-.Mini-chicken{
-    display: flex;
-    align-items: left;
-    flex-direction: row;
-    gap:20px;
-}
-.Mini-chicken .article-image{
-    width:50%;
-}
-.mini-chicken-article-info{
-    display: flex;
-    align-items: left;
-    flex-direction: column;
-    width:50%;
-    padding-top:20px;
-}
-}
+/*Break point of content grid*/
 @media screen and (min-width: 801px) {
   .articles-grid .container-articles-grid-photos {
     
@@ -722,6 +727,9 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     
   }
 }
+
+
+/*Break point for the littlest screens*/
 @media screen and (max-width: 360px) {
   .shop-information .card-shop {
     padding: 6px 6px;
