--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,9 @@ p {
 footer p{
   color:white;
 }
+iframe{
+  border: 0px;
+}
 /********************************************************************/
 /*******************************Header*******************************/
 .header-principal {
@@ -227,8 +230,7 @@ footer p{
     align-items: center;
     gap: 5px;
     font-family: Montserrat-400;
-    font-size: 0.8em;
-    align-items: center;
+    font-size: 0.8em; 
 }
 #index .articles-grid{
   margin-top:20px;
@@ -289,7 +291,6 @@ footer p{
 .shop-information {
   background-image: url("../img/shop-bg.jpg");
   background-size: cover;
-  background-position: start;
   background-repeat: no-repeat;
   height: 460px;
   display: flex;
@@ -421,21 +422,6 @@ footer .social-container {
   align-items: center;
   justify-content: center;
 }
-footer .social-container .text-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 60%;
-  gap: 20px;
-  margin: 30px auto 40px auto;
-  text-align: center;
-  z-index: 50;
-  color:var(--text-color);
-}
-footer .social-container .text-container > h5{
-  margin-bottom: 0px
-}
 footer .social-container::before {
   content: "";
   display: block;
@@ -450,6 +436,21 @@ footer .social-container::before {
   background-repeat: repeat;
   width: 100%;
   height: 100%;
+}
+footer .social-container .text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+  gap: 20px;
+  margin: 30px auto 40px auto;
+  text-align: center;
+  z-index: 50;
+  color:var(--text-color);
+}
+footer .social-container .text-container > h5{
+  margin-bottom: 0px
 }
 footer .social-container .text-container p {
   padding: 0 1px;
@@ -676,7 +677,6 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
   }
   .Mini-chicken .mini-chicken-article-info{
     display: flex;
-    align-items: left;
     flex-direction: column;
     width:50%;
     margin-top:20px;
@@ -727,8 +727,6 @@ footer .social-media .separator-contents .web-links-interest li a:hover{
     
   }
 }
-
-
 /*Break point for the littlest screens*/
 @media screen and (max-width: 360px) {
   .shop-information .card-shop {
